# DDE_proj

./: README.md  configs.py  de-dq-prep.ipynb  presentation.pptx  pyproject.toml
dashboards/: dashboard.py
database/: db_bestiary.py  db_items.py  db_mechanics.py  db_spells.py  load_db.py  load_db_test.py  query.py  update_db.py
main/: __init__.py  pipeline.py
parsing/: bestiary.py  classes.py  dop_info.py  items.py  main.py  mechanics.py  spells.json  spells.py  utils.py
preprocessing/: de-dq-prep.ipynb  preprocessing.py
