[tool.poetry]
name = "data engineering"
version = "0.1.0"
description = ""
authors = ["Egor Polyakov <leftgoga@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
requests = "^2.32.3"
bs4 = "^0.0.2"
tqdm = "^4.67.0"
clickhouse-connect = "^0.8.7"
html2text = "^2024.2.26"
pgvector = "^0.3.6"
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"
langchain-experimental = "^0.3.3"
langchain-huggingface = "^0.1.2"
langchain-core = "^0.3.24"
prefect = "^3.1.6"
torch = {version = "^2.5.1+cu124", source = "pytorch_gpu"}
loguru = "^0.7.3"
python-dotenv = "^1.0.1"


[[tool.poetry.source]]
name = "pytorch_gpu"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
